--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
             <div class="input-adicionais"> <!-- Informações adicionais -->
                 <textarea id="texto" cols="50" rows="15" maxlength="750" placeholder="Informações adicionais (coloque aqui experiência anterior, habilidades específicas, etc...)"></textarea>
             </div>
-            <div class="btn">  <!-- Botão -->
-                <input type="submit" value="Enviar">
+            <div class="container-btn">  <!-- Botão -->
+                <img src="Imagens/icone-fleche-droite-jaune.png" alt="SetaAnimada" class="seta-animada">
+                <input type="submit" value="Enviar" class="btn">
             </div>
         </form>
     </main>
